kubernasty/manifests-old-v1/mantle/whoami/ingresses/https-staging.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-https-staging
  namespace: whoami
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-issuer-staging
spec:
  rules:
    - host: whoami-https-staging.kubernasty.micahrl.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 5678
  tls:
    # This secretName must match the name of the cert-manager Certificate backing secret
    - secretName: whoami-cert-staging-backing-secret
      hosts:
        - whoami-https-staging.kubernasty.micahrl.com
